adding a tag from hub in index file on main B

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>this is p tag in index file on main B</p>
+    <a href="https://www.google.com">Google</a>
 </body>
 </html>
