adding img tag from hub in index file on main B

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>this is p tag in index file on main B</p>
     <a href="https://www.google.com">Google</a>
+    <img src="" width=200  alt='image1'>
 </body>
 </html>
