add div tag in index fiel on main B

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <p>this is p tag in index file on main B</p>
+    <div>
+        this is a div tag
+    </div>
 </body>
 </html>
