--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <p>this is p tag in index file on main B</p>
 
-    
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+    </ul>
 
 
   </body>
