add h1 tag from hub in index file on main B

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>this is p tag in index file on main B</p>
 
     <a href="https://www.google.com">Google</a>
+    
+    <h1> This is git hub </h1>
 
 
   </body>
